Finalized AuthorizeAccountResult