@@ -1,33 +1,40 @@
 package bbb2.api.results;
 
-import java.net.URI;
+import java.net.MalformedURLException;
+import java.net.URL;
 
+import bbb2.api.ApiParseException;
 import bbb2.util.json.JsonObjectProxy;
+import bbb2.util.json.JsonParseException;
 
 public class AuthorizeAccountResult
 {
-    public AuthorizeAccountResult(String jsonString)
+    public AuthorizeAccountResult(String jsonString) throws ApiParseException
     {
         try
         {
             JsonObjectProxy json = new JsonObjectProxy(jsonString);
             accountId = json.getString("accountId");
             authToken = json.getString("authorizationToken");
-            apiUrl = new URI(json.getString("apiUrl"));
-            downloadUrl = new URI(json.getString("downloadUrl"));
+            apiUrl = new URL(json.getString("apiUrl"));
+            downloadUrl = new URL(json.getString("downloadUrl"));
             minPartSizeBytes = json.getInt("absoluteMinimumPartSize");
             recPartSizeBytes = json.getInt("recommendedPartSize");
         }
-        catch (Exception e)
+        catch (JsonParseException e)
         {
-            e.printStackTrace();
+            throw new ApiParseException("Unable to parse API response.", e);
+        }
+        catch (MalformedURLException e)
+        {
+            throw new ApiParseException("Malformed URL in API response.", e);
         }
     }
 
     public String accountId;
     public String authToken;
-    public URI apiUrl;
-    public URI downloadUrl;
+    public URL apiUrl;
+    public URL downloadUrl;
     public int minPartSizeBytes;
     public int recPartSizeBytes;
 }
